# restaurant

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: a1765196ca34_create_tables.py
api_v1/: __init__.py
api_v1/dish/: crud.py  dependencies.py  schemas.py  views.py
api_v1/menu/: crud.py  dependencies.py  schemas.py  views.py
api_v1/submenu/: crud.py  dependencies.py  schemas.py  views.py
src/: settings.py
src/db/: db_helper.py
src/db/models/: __init__.py  base.py  dish.py  menu.py  submenu.py
