[tool.poetry]
name = "restaurant"
version = "0.1.0"
description = ""
authors = ["Rustem <kaidohmary@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.0"}
psycopg2-binary = "^2.9.9"
SQLAlchemy = "^2.0.25"
alembic = "^1.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
